All functions have been defined and implemented into the main file. Lab07 should be pretty much done

--- a/lab07/makefile
+++ b/lab07/makefile
@@ -1,4 +1,4 @@
-all: vertical palindrome
+all: vertical palindrome selectionSort
 
 vertical: vertical.cpp
 	g++ -o vertical vertical.cpp -Wall -std=c++17
@@ -6,5 +6,8 @@ vertical: vertical.cpp
 palindrome: palindrome.cpp
 	g++ -o palindrome palindrome.cpp pfunctions.cpp
 
+selectionSort: selectionSort.cpp sfunctions.cpp
+	g++ -o selectionSort selectionSort.cpp sfunctions.cpp
+
 clean: 
-	rm -f vertical palindrome
+	rm -f vertical palindrome selectionSort
